kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniselec-admin
  labels:
    app: uniselec-admin
spec:
  selector:
    matchLabels:
      app: uniselec-admin
  template:
    metadata:
      labels:
        app: uniselec-admin
    spec:
      containers:
      - name: uniselec-admin
        image: harbor.unilab.edu.br/unilab/uniselec-admin:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
      volumes:
      - name: localtime
        hostPath:
          path: /usr/share/zoneinfo/America/Fortaleza
          type: File
      - name: timezone
        hostPath:
          path: /etc/timezone
          type: File
      imagePullSecrets:
      - name: regcred
