kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uniselec-admin
  labels:
    app: uniselec-admin
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: uniselec-admin
